# game

./: .gitignore  README.md  gh_push.sh  publish.sh  pubspec.yaml  readme.md
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
native_lib/: .gitignore  CMakeLists.txt  readme.md
package/game/: pubspec.yaml
package/game/example/: game_example.dart
package/game/lib/: game.dart
package/game/test/: game_test.dart
package/game_android/: pubspec.yaml
package/game_android/lib/: game_android.dart
package/game_android/test/: game_android_test.dart
package/game_apis/: pubspec.yaml
package/game_apis/example/: game_apis_example.dart
package/game_apis/lib/: game_apis.dart
package/game_apis/test/: game_apis_test.dart
package/game_assets_flutter/: pubspec.yaml
package/game_assets_flutter/lib/: game_assets_flutter.dart
package/game_assets_flutter/test/: game_assets_flutter_test.dart
package/game_cli/: README.md  pubspec.yaml
package/game_cli/example/: game_cli_example.dart
package/game_cli/lib/: game_cli.dart
package/game_cli/test/: game_cli_test.dart
package/game_client/: pubspec.yaml
package/game_client/example/: game_client_example.dart
package/game_dart/: pubspec.yaml
package/game_engine/: pubspec.yaml
package/game_engine_dart/: pubspec.yaml
package/game_engine_flutter/: pubspec.yaml
package/game_flutter/: pubspec.yaml
package/game_fucshia/: pubspec.yaml
package/game_ios/: pubspec.yaml
package/game_ios/lib/: game_ios.dart
package/game_isar_scheme/: pubspec.yaml
package/game_linux/: pubspec.yaml
package/game_macos/: pubspec.yaml
package/game_scheme/: pubspec.yaml
package/game_server/: pubspec.yaml
package/game_web/: pubspec.yaml
package/game_windows/: pubspec.yaml
test/: game_test.dart
(+35 files in other folders)
